# grelmicro

./: .conflict-files  .gitignore  .pre-commit-config.yaml  404.html  API_REVIEW_RC.md  AUDIT.md  CNAME  CONTRIBUTING.md  LAUNCH_CHECKLIST.md  MARKET_ANALYSIS.md  README.md  ROAD_TO_1.0.md  THIRD_PARTY_NOTICES.md  backlog.md  codecov.yml  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  todo.md
.conflict-side-1/docs/: logging.md
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  pre-commit.yml  publish.yml  release.yml  reusable-tests.yml  scorecard.yml  test.yml
advanced/config/: index.html
architecture/: index.html
architecture/api-conventions/: index.html
architecture/asyncio/: index.html
architecture/backends/: index.html
architecture/config/: index.html
architecture/coordination/: index.html
architecture/decorators/: index.html
architecture/graceful-shutdown/: index.html
architecture/imports/: index.html
architecture/kubernetes/: index.html
architecture/multiple-apps/: index.html
architecture/outbox/: index.html
architecture/plugins/: index.html
architecture/reconfigure/: index.html
architecture/sqlite/: index.html
architecture/sync/: index.html
architecture/sync-from-thread/: index.html
architecture/testing/: index.html
architecture/tracing/: index.html
benchmarks/: __init__.py  cache_benchmark.py  circuitbreaker_benchmark.py  config_attr_benchmark.py  index.html  lock_benchmark.py  logging_benchmark.py  ratelimiter_benchmark.py
cache/: index.html
capabilities/: index.html
changelog/: index.html
comparison/: index.html
config/: index.html
configuration/reconfigure-from-configmap/: index.html
coordination/: index.html
css/: overrides.css
docs/: benchmarks.md  cache.md  capabilities.md  changelog.md  comparison.md  compatibility.md  config.md  coordination.md  first-steps.md  health.md  idempotency.md  index.md  installation.md  json.md  llms.txt  logging.md  metrics.md  outbox.md  providers.md  resilience.md  roadmap.md  sync.md  task.md  testing.md  third_party_notices.md  tracing.md  wiring.md
docs/advanced/: config.md
docs/architecture/: api-conventions.md  asyncio.md  backends.md  config-plan.md  config.md  coordination.md  decorators.md  graceful-shutdown.md  grelmicro-app.md  grelmicro.md  imports.md  index.md  kubernetes.md  multiple-apps.md  outbox.md  plugins.md  postgres.md  reconfigure.md  shield-spec.md  sqlite.md  sync-from-thread.md  sync.md  testing.md  tracing.md
docs/configuration/: reconfigure-from-configmap.md
docs/css/: overrides.css
docs/reference/: cache.md  clock.md  config.md  coordination.md  fastapi.md  faststream.md  health.md  idempotency.md  json.md  logging.md  metrics.md  outbox.md  resilience.md  sync.md  task.md  testing.md  trace.md
docs/resilience/: bulkhead.md  circuit-breaker.md  composition.md  fallback.md  index.md  rate-limiter.md  retry.md  shield.md  timeout.md
docs/snippets/: simple_fastapi_app.py  single_file_app.py
docs/sync/: index.md
examples/: __init__.py  simple_fastapi_app.py
examples/fastapi-demo/: Dockerfile  README.md  app.py  compose.yml  pyproject.toml
examples/logging/: basic.py  configure_logging.py  fastapi.py
examples/resilience/: __init__.py  circuitbreaker.py
examples/sync/: leaderelection_anyio.py  memory.py
examples/task/: fastapi.py  faststream.py  interval_router.py  router.py
examples/third-party-adapter/: README.md  grelmicro_mongo.py  pyproject.toml
first-steps/: index.html
grelmicro/: __init__.py  _app.py  _async.py  _backends.py  _component.py  _config.py  _context.py  _deprecation.py  _discovery.py  _from_thread.py  _json.py  _module.py  _pattern.py  _redis.py  _types.py  errors.py  fastapi.py  json.py  testing.py  to_thread.py
grelmicro/abc/: lock.py
grelmicro/backends/: errors.py  registry.py
grelmicro/cache/: __init__.py  _backends.py  _component.py  _key.py  _module.py  _protocol.py  _stampede.py  cached.py  errors.py  memory.py  postgres.py  redis.py  serializers.py  sqlite.py  ttl.py
grelmicro/clock/: __init__.py  _real.py  _seam.py  abc.py  virtual.py
grelmicro/config/: __init__.py  _external.py  abc.py  file.py
grelmicro/coordination/: __init__.py  _base.py  _component.py  _handle.py  _protocol.py  _tokens.py  abc.py  errors.py  kubernetes.py  leaderelection.py  lock.py  memory.py  postgres.py  redis.py  sqlite.py  tasklock.py
grelmicro/health/: __init__.py  _backends.py  _checks.py  _models.py  _module.py  _protocol.py  _registry.py  _state.py  _types.py  errors.py  fastapi.py
grelmicro/idempotency/: __init__.py  _decorator.py  _idempotency.py  config.py  errors.py
grelmicro/integrations/: __init__.py  fastapi.py  faststream.py
grelmicro/log/: __init__.py  _apply.py  _component.py  _dedup.py  _loguru.py  _ratelimit.py  _shared.py  _stdlib.py  _structlog.py  config.py  errors.py  types.py  uvicorn.py
grelmicro/logging/: __init__.py  _dedup.py  _loguru.py  _ratelimit.py  _shared.py  _stdlib.py  _structlog.py  config.py  errors.py  loguru.py  types.py  (+1 more)
health/: index.html
idempotency/: index.html
installation/: index.html
json/: index.html
logging/: index.html
metrics/: index.html
outbox/: index.html
providers/: index.html
resilience/: index.html
roadmap/: index.html
search/: search_index.json
snippets/: __init__.py  simple_fastapi_app.py  single_file_app.py
sync/: index.html
task/: index.html
testing/: index.html
tests/: __init__.py  _faults.py  conftest.py  test_asgi_frameworks.py  test_async.py  test_backend_lifecycle.py  test_config.py  test_config_file.py  test_deprecations.py  test_discovery.py  test_env_load.py  test_env_opt_in.py  test_external_config.py  test_fastapi.py  test_faststream.py  test_from_thread.py  test_grelmicro_app.py  test_health_router.py  test_json.py  test_public_api.py  test_readme.py  test_snippets.py  test_testing.py  test_uses_coercion.py
third_party_notices/: index.html
tools/: run_mutmut.py
tracing/: index.html
wiring/: index.html
(+594 files in other folders)
