[project]
name = "grelmicro"
version = "0.0.0.dev0"
description = "grelmicro is a lightweight toolkit for building Python applications that need to coordinate work across processes"
license = "MIT"
authors = [{ name = "Loïc Gremaud", email = "grelinfo@gmail.com"}]
dynamic = ["readme"]
keywords = [
    "microservice",
    "microservice-patterns",
    "modular-monolith",
    "self-contained-systems",
    "cloud-native",
    "kubernetes",
    "containerized",
    "distributed-systems",
    "distributed-lock",
    "leader-election",
    "rate-limiter",
    "circuit-breaker",
    "cache",
    "health-checks",
    "task-scheduler",
    "logging",
    "tracing",
    "opentelemetry",
    "redis",
    "postgresql",
    "fastapi",
    "asyncio",
    "async",
    "pydantic",
]

classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.5.0",
    "fast-depends>=2.0.0",
    "pydantic-settings>=2.5.0",
    "pydantic-extra-types>=2.11.0",
]

[project.urls]
Documentation = "https://grelinfo.github.io/grelmicro"
Repository = "https://github.com/grelinfo/grelmicro.git"
Issues = "https://github.com/grelinfo/grelmicro/issues"

[project.entry-points."grelmicro.providers"]
redis = "grelmicro.providers.redis:RedisProvider"

[project.optional-dependencies]
standard = [
    "orjson>=3.10.11",
    "uvloop>=0.21.0; sys_platform != 'win32' and sys_platform != 'cygwin' and platform_python_implementation != 'PyPy'",
]
postgres = [
    "asyncpg>=0.30.0",
]
redis = [
    "redis>=5.0.0",
]
sqlite = [
    "aiosqlite>=0.20.0",
]
kubernetes = [
    "lightkube>=0.15.0",
]
opentelemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]
structlog = [
    "structlog>=24.1.0",
    "orjson>=3.10.11",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
    "ruff>=0.7.4",
    "testcontainers[postgres,redis]>=4.8.2",
    "pytest-timeout>=2.3.1",
    "pytest-mock>=3.14.0",
    "pytest-randomly>=3.16.0",
    "pre-commit>=4.0.1",
    "fastapi>=0.115.5",
    "fastapi-cli>=0.0.5",
    "faststream>=0.5.30",
    "freezegun>=1.5.2",
    "ty>=0.0.13",
    "loguru>=0.7.2",
    "orjson>=3.10.11",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "structlog>=24.1.0",
    "aiosqlite>=0.20.0",
    "lightkube>=0.15.0",
    "uvicorn>=0.29.0",
    "pytest-xdist>=3.8.0",
]
docs = [
    "mkdocs-material>=9.5.44",
    "mkdocstrings[python]>=0.27.0",
    "griffe-typingdoc>=0.2.7",
    "pygments>=2.18.0",
    "pymdown-extensions>=10.12",
    "mdx-include>=1.4.2",
]

[build-system]
requires = ["hatchling>=1.25,<2", "hatch-fancy-pypi-readme>=24,<26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grelmicro"]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

# Rewrite relative `docs/<section>/index.md` links to docs site URLs.
[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\]\(docs/(.+?)/index\.md\)'
replacement = '](https://grelinfo.github.io/grelmicro/\1/)'

# Rewrite relative `docs/<path>.md` links to docs site URLs.
[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\]\(docs/(.+?)\.md\)'
replacement = '](https://grelinfo.github.io/grelmicro/\1/)'

# Rewrite relative `docs/img/...` asset references to GitHub raw.
[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(src|href)="docs/img/'
replacement = '\1="https://raw.githubusercontent.com/grelinfo/grelmicro/main/docs/img/'

[tool.ruff]
target-version = "py312"
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "ISC001"] # Ignore rules conflicting with the formatter.

[tool.ruff.lint.extend-per-file-ignores]
"docs/img/logo/build_logo.py" = [
    "ANN",     # internal build script, type stubs add noise
    "D",       # no docstring-per-function enforcement
    "ERA001",  # commented-out code is fine in adhoc scripts
    "INP001",  # the script lives with its output, not a package
    "PERF401", # adhoc list-building is clearer than comprehensions
    "PLR0913", # argument-count doesn't apply to build helpers
    "PLR0915", # allow long-but-linear build functions
    "PLR2004", # magic numbers come from font metrics
    "PYI041",  # don't require simplified numeric union types
    "RUF001",  # dotless-ı (U+0131) is the intended glyph
    "RUF002",  # same, inside docstrings
    "RUF046",  # allow constructing from measured floats
    "S310",    # font is downloaded from a fixed https URL
    "T201",    # print() is how the script reports progress
]
"docs/snippets/*" = [
    "ARG001",
    "ANN001",
    "ANN201",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "DTZ001",
    "ERA001",
    "INP001",
    "T201",
]
"docs/snippets/logging/basic.py" = ["EM101", "TRY"]
"docs/snippets/resilience/shield_giveup.py" = ["EM101", "TRY"]
"docs/snippets/task/router.py" = ["I001", "E402"]
"tests/*" = [
    "S101",
    "SLF001",
    "RUF029",  # async test helpers may be coroutine-only without awaits
]

[tool.ruff.lint.pycodestyle]
max-line-length = 100 # reports only line that exceed 100 characters.

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.pylint]
max-args = 10

[tool.ty.src]
# The logo build script is an adhoc PEP 723 utility (``uv run`` pulls its
# deps into an ephemeral env). Project-level type checking can't see
# ``resvg_py`` or ``fontTools`` and has no reason to.
exclude = [
    "docs/img/logo/build_logo.py",
]

[tool.pytest.ini_options]

addopts = """
    --strict-config
    --strict-markers
    -n auto
"""
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = """
    integration: mark a test as an integration test (needs Docker or external services)
    slow: mark a test as slow (no external infra, but heavier than the default unit suite)
"""
filterwarnings = [
    # testcontainers' own deprecation banner, not driven by our code.
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning:testcontainers",
]

testpaths = "tests"

[tool.coverage.run]
source = ["grelmicro"]

[tool.coverage.report]
sort = "-Cover"
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "assert_never\\(.*\\)",
    "pytest.fail\\(.*\\)",
    "pass",
]
