[project]
name = "grelmicro"
version = "0.0.0.dev0"
description = "grelmicro is a lightweight toolkit for building Python applications that need to coordinate work across processes"
license = "MIT"
authors = [{ name = "Loïc Gremaud", email = "grelinfo@gmail.com"}]
dynamic = ["readme"]
keywords = [
    "microservice",
    "microservice-patterns",
    "modular-monolith",
    "self-contained-systems",
    "cloud-native",
    "kubernetes",
    "containerized",
    "distributed-systems",
    "distributed-lock",
    "leader-election",
    "rate-limiter",
    "circuit-breaker",
    "cache",
    "health-checks",
    "task-scheduler",
    "logging",
    "tracing",
    "opentelemetry",
    "redis",
    "postgresql",
    "fastapi",
    "asyncio",
    "async",
    "pydantic",
]

classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.5.0",
    "fast-depends>=2.0.0",
    "pydantic-settings>=2.5.0",
    "pydantic-extra-types>=2.11.0",
]

[project.urls]
Documentation = "https://grelinfo.github.io/grelmicro"
Repository = "https://github.com/grelinfo/grelmicro.git"
Issues = "https://github.com/grelinfo/grelmicro/issues"

[project.entry-points."grelmicro.providers"]
redis = "grelmicro.providers.redis:RedisProvider"
valkey = "grelmicro.providers.valkey:ValkeyProvider"
postgres = "grelmicro.providers.postgres:PostgresProvider"
sqlite = "grelmicro.providers.sqlite:SQLiteProvider"
memory = "grelmicro.providers.memory:MemoryProvider"

[project.entry-points."grelmicro.coordination.adapters"]
memory = "grelmicro.coordination.memory:MemoryLockAdapter"
redis = "grelmicro.coordination.redis:RedisLockAdapter"
postgres = "grelmicro.coordination.postgres:PostgresLockAdapter"
sqlite = "grelmicro.coordination.sqlite:SQLiteLockAdapter"
kubernetes = "grelmicro.coordination.kubernetes:KubernetesLockAdapter"

[project.entry-points."grelmicro.coordination.election.adapters"]
memory = "grelmicro.coordination.memory:MemoryLeaderElectionAdapter"
redis = "grelmicro.coordination.redis:RedisLeaderElectionAdapter"
postgres = "grelmicro.coordination.postgres:PostgresLeaderElectionAdapter"
kubernetes = "grelmicro.coordination.kubernetes:KubernetesLeaderElectionAdapter"

[project.entry-points."grelmicro.coordination.schedule.adapters"]
memory = "grelmicro.coordination.memory:MemoryScheduleAdapter"
redis = "grelmicro.coordination.redis:RedisScheduleAdapter"
postgres = "grelmicro.coordination.postgres:PostgresScheduleAdapter"
sqlite = "grelmicro.coordination.sqlite:SQLiteScheduleAdapter"

[project.entry-points."grelmicro.cache.adapters"]
memory = "grelmicro.cache.memory:MemoryCacheAdapter"
redis = "grelmicro.cache.redis:RedisCacheAdapter"
postgres = "grelmicro.cache.postgres:PostgresCacheAdapter"
sqlite = "grelmicro.cache.sqlite:SQLiteCacheAdapter"

[project.entry-points."grelmicro.ratelimiter.adapters"]
memory = "grelmicro.resilience.ratelimiter.memory:MemoryRateLimiterAdapter"
redis = "grelmicro.resilience.ratelimiter.redis:RedisRateLimiterAdapter"
postgres = "grelmicro.resilience.ratelimiter.postgres:PostgresRateLimiterAdapter"
sqlite = "grelmicro.resilience.ratelimiter.sqlite:SQLiteRateLimiterAdapter"

[project.entry-points."grelmicro.circuitbreaker.adapters"]
memory = "grelmicro.resilience.circuitbreaker.memory:MemoryCircuitBreakerAdapter"
redis = "grelmicro.resilience.circuitbreaker.redis:RedisCircuitBreakerAdapter"
postgres = "grelmicro.resilience.circuitbreaker.postgres:PostgresCircuitBreakerAdapter"
sqlite = "grelmicro.resilience.circuitbreaker.sqlite:SQLiteCircuitBreakerAdapter"

# First-party OpenTelemetry instrumentor for valkey-py, which has no official
# package. `Trace(instrument=...)` discovers it through the standard
# `opentelemetry_instrumentor` sweep, like any other library instrumentor.
[project.entry-points.opentelemetry_instrumentor]
valkey = "grelmicro.trace._valkey:ValkeyInstrumentor"

[project.optional-dependencies]
standard = [
    "orjson>=3.10.11",
    "uvloop>=0.21.0; sys_platform != 'win32' and sys_platform != 'cygwin' and platform_python_implementation != 'PyPy'",
]
faststream = [
    "faststream>=0.7.0",
]
postgres = [
    "asyncpg>=0.30.0",
]
redis = [
    "redis>=5.0.0",
]
sqlite = [
    "aiosqlite>=0.20.0",
]
kubernetes = [
    "lightkube>=0.15.0",
]
opentelemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-exporter-prometheus>=0.41b0",
    "prometheus-client>=0.19.0",
]
instrumentation = [
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "opentelemetry-instrumentation-asyncpg>=0.41b0",
]
structlog = [
    "structlog>=24.1.0",
    "orjson>=3.10.11",
]
valkey = [
    "valkey>=6",
]
yaml = [
    "pyyaml>=6",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
    "ruff>=0.7.4",
    "testcontainers[postgres,redis]>=4.8.2",
    "pytest-timeout>=2.3.1",
    "pytest-mock>=3.14.0",
    "pytest-randomly>=3.16.0",
    "pre-commit>=4.0.1",
    "fastapi>=0.115.5",
    "fastapi-cli>=0.0.5",
    "faststream>=0.7.0",
    "freezegun>=1.5.2",
    "ty>=0.0.13",
    "loguru>=0.7.2",
    "orjson>=3.10.11",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "valkey>=6",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-exporter-prometheus>=0.41b0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "opentelemetry-instrumentation-asyncpg>=0.41b0",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    "aiosqlite>=0.20.0",
    "lightkube>=0.15.0",
    "uvicorn>=0.29.0",
    "pytest-xdist>=3.8.0",
    "syrupy>=5.3.1",
    "pyyaml>=6",
    "litestar>=2.24.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "sqlmodel>=0.0.24",
]
docs = [
    "mkdocs-material>=9.5.44",
    "mkdocstrings[python]>=0.27.0",
    "griffe-typingdoc>=0.2.7",
    "pygments>=2.18.0",
    "pymdown-extensions>=10.12",
    "mdx-include>=1.4.2",
]
mutation = [
    "mutmut>=3",
]

[build-system]
requires = ["hatchling>=1.25,<2", "hatch-fancy-pypi-readme>=24,<26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grelmicro"]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

# Rewrite relative `docs/<section>/index.md` links to docs site URLs.
[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\]\(docs/(.+?)/index\.md\)'
replacement = '](https://grelinfo.github.io/grelmicro/\1/)'

# Rewrite relative `docs/<path>.md` links to docs site URLs.
[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\]\(docs/(.+?)\.md\)'
replacement = '](https://grelinfo.github.io/grelmicro/\1/)'

# Rewrite relative `docs/img/...` asset references to GitHub raw.
[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(src|href)="docs/img/'
replacement = '\1="https://raw.githubusercontent.com/grelinfo/grelmicro/main/docs/img/'

[tool.ruff]
target-version = "py312"
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "ISC001"] # Ignore rules conflicting with the formatter.

[tool.ruff.lint.extend-per-file-ignores]
"tools/*" = [
    "INP001",  # standalone dev scripts, not an importable package
]
"examples/*" = [
    "ARG001",  # FastAPI lifespan signature requires the `app` argument
    "D103",    # demo endpoints document their Pattern in a one-line comment
    "FBT001",  # bool query parameters are idiomatic in FastAPI
    "FBT002",  # same: `fail: bool = False` is a query flag
    "INP001",  # standalone example app, not an importable package
]
"docs/img/demo/app.py" = [
    "INP001",  # recording app for the demo GIF, not an importable package
]
"docs/img/logo/build_logo.py" = [
    "ANN",     # internal build script, type stubs add noise
    "D",       # no docstring-per-function enforcement
    "ERA001",  # commented-out code is fine in adhoc scripts
    "INP001",  # the script lives with its output, not a package
    "PERF401", # adhoc list-building is clearer than comprehensions
    "PLR0913", # argument-count doesn't apply to build helpers
    "PLR0915", # allow long-but-linear build functions
    "PLR2004", # magic numbers come from font metrics
    "PYI041",  # don't require simplified numeric union types
    "RUF001",  # dotless-ı (U+0131) is the intended glyph
    "RUF002",  # same, inside docstrings
    "RUF046",  # allow constructing from measured floats
    "S310",    # font is downloaded from a fixed https URL
    "T201",    # print() is how the script reports progress
]
"docs/snippets/*" = [
    "ARG001",
    "ARG002",
    "D107",
    "S101",
    "ANN001",
    "ANN201",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "DTZ001",
    "ERA001",
    "INP001",
    "T201",
]
"docs/snippets/logging/basic.py" = ["EM101", "TRY"]
"docs/snippets/resilience/shield_giveup.py" = ["EM101", "TRY"]
"docs/snippets/task/router.py" = ["I001", "E402"]
"tests/*" = [
    "S101",
    "S105",
    "S106",
    "SLF001",
    "RUF029",  # async test helpers may be coroutine-only without awaits
]

[tool.ruff.lint.pycodestyle]
max-line-length = 100 # reports only line that exceed 100 characters.

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.pylint]
max-args = 10

[tool.ty.src]
# The logo build script is an adhoc PEP 723 utility (``uv run`` pulls its
# deps into an ephemeral env). Project-level type checking can't see
# ``resvg_py`` or ``fontTools`` and has no reason to. The mutmut runner
# imports ``mutmut``, which lives in the optional ``mutation`` dependency
# group that CI does not install.
exclude = [
    "docs/img/logo/build_logo.py",
    "tools/run_mutmut.py",
]

[tool.pytest.ini_options]

addopts = """
    --strict-config
    --strict-markers
    -n auto
"""
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = """
    integration: mark a test as an integration test (needs Docker or external services)
    slow: mark a test as slow (no external infra, but heavier than the default unit suite)
    stress: mark a test as a stress or endurance test (heavy load, opt-in via -m stress)
"""
filterwarnings = [
    "error",
    # Starlette's TestClient warns that httpx v1 is deprecated in favour of
    # httpx2. Import-time and third-party, not driven by our code.
    "ignore:Using .httpx. with .starlette.testclient. is deprecated:Warning",
    # testcontainers' own deprecation banners, not driven by our code.
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning:testcontainers",
    "ignore:The wait_for_logs function with string or callable predicates is deprecated:DeprecationWarning",
    # Sockets and event loops from TestClient and `asyncio.run` are torn down at
    # garbage-collection time, so the interpreter reports them non-deterministically
    # after the owning test ends. This is test-harness noise: grelmicro creates no
    # event loops of its own and drives every backend through async context managers.
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

testpaths = "tests"

[tool.coverage.run]
source = ["grelmicro"]
branch = true

[tool.coverage.report]
sort = "-Cover"
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "assert_never\\(.*\\)",
    "pytest.fail\\(.*\\)",
    "pass",
]

# Mutation testing. Run with `just mutation` (must be `python -m mutmut` so the
# mutants/ copy shadows the editable install). The whole package is copied so
# imports resolve; only_mutate scopes which files are mutated. Point it at the
# file under campaign and widen pytest_add_cli_args_test_selection to match.
[tool.mutmut]
source_paths = ["grelmicro/"]
only_mutate = [
    "grelmicro/coordination/memory.py",
    "grelmicro/coordination/leaderelection.py",
    "grelmicro/coordination/tasklock.py",
    "grelmicro/coordination/lock.py",
]
pytest_add_cli_args_test_selection = ["tests/coordination/"]
pytest_add_cli_args = ["-n0", "-m", "not integration and not slow and not stress"]
also_copy = ["README.md"]
