[project]
name = "grelmicro-fastapi-demo"
version = "0"
description = "Runnable FastAPI + grelmicro demo (every Pattern, Redis + Postgres)."
requires-python = ">=3.12"
dependencies = [
    # Pin to a published grelmicro release when running outside this repo.
    # The bundled Dockerfile installs grelmicro from the checkout instead.
    "grelmicro[redis,postgres,standard]",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
]

[tool.uv.sources]
# Inside the monorepo, resolve grelmicro from the repo root.
grelmicro = { path = "../..", editable = true }
